--- a/application/templates/layouts/base.html
+++ b/application/templates/layouts/base.html
@@ -66,11 +66,11 @@
           </li>
           <li class="govuk-header__navigation-item">
             {% if session["user"] %}
-            <a class="govuk-header__link" href="#">
+            <a class="govuk-header__link" href="{{url_for('auth.logout')}}">
               Sign out
             </a>
             {% else %}
-            <a class="govuk-header__link" href="#">
+            <a class="govuk-header__link" href="{{url_for('auth.login', next=request.path)}}">
               Sign in
             </a>
             {% endif %}
